bias resources separated + dlr dcb added + reading multi days dcb files + small bug fixies

--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -66,6 +66,7 @@ aiub_code = "?{aiub}/CODE/${YYYY}/"
 dcb = "?{ign}/pub/igs/products/mgex/dcb/${YYYY}/"
 dcb_bk = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
 dcb_aiub = "?{aiub}/CODE/${YYYY}/"
+dcb_cddis = "?{cddis}/archive/gnss/products/bias/${YYYY}/"
 
 # old: atm_load_tuwien = "?{ggos_tuwien}/LOADING/VERSION4/GRID/${YYYY}/"
 atm_load_tuwien = "?{ggos_tuwien}/APL_products/GRID/${YYYY}/"
@@ -378,7 +379,6 @@ real-time = "( codep_eph_aiub ) & ( codep_erp_aiub )"
 real-time_latency = [0 0]
 broadcast = "bkg_broadcast"
 broadcast_latency = [0 9]
-bias = "code_mgex_aiub_bias"
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
 iono_center = "default"
@@ -404,7 +404,6 @@ rapid = "coder_eph_aiub & ( coder_erp_aiub ) & ( coder_clk_aiub )"
 rapid_latency = [0 312]
 real-time = "( codep_eph_aiub ) & ( codep_erp_aiub )"
 real-time_latency = [0 0]
-bias = "code_mgex_aiub_bias"
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
 
@@ -418,7 +417,6 @@ rapid = "coder_eph_aiub & ( coder_erp_aiub ) & ( coder_clk_aiub )"
 rapid_latency = [0 312]
 real-time = "( codep_eph_aiub ) & ( codep_erp_aiub )"
 real-time_latency = [0 0]
-bias = "code_p1p2_dcb & code_p1c1_dcb" 
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
 
@@ -474,7 +472,6 @@ atm_load = "tuw_atm_load_v04"
 description = "Centre national d'études spatiales - real time orbit from ppp-wizard.net"
 real-time = "( cnes_rt_sp3 ) & ( cnes_rt_clk )"
 real-time_latency = [0 25]
-bias = "cnes_rt_bias"
 iono_center = "cnes"
 atm_load = "tuw_atm_load_v04"
 
@@ -530,7 +527,6 @@ description = "European Space Operation Center ( ESOC ) MGEX"
 final = "esa_mgex_eph & ( esa_mgex_erp ) & ( esa_mgex_clk_30s )"
 final_latency = [120 288]
 iono_center = "esa"
-bias = "esa_mgex_bia"
 atm_load = "tuw_atm_load_v04"
 
 # JAXA MGEX ----------------------------------------------------------------------------------------
@@ -702,13 +698,7 @@ location = ["bkg"]
 filename = "cod${WWWWD}.clk_m"
 location = ["bkg"]
 
-[f_code_p1p2_dcb]
-filename = "P1P2${YY}${MM}.DCB"
-location = ["aiub_dcb"]
 
-[f_code_p1c1_dcb]
-filename = "P1C1${YY}${MM}.DCB"
-location = ["aiub_dcb"]
 
 # CODE MGEX @ AIUB ---------------------------------------------------------------------------------
 
@@ -724,9 +714,6 @@ location = ["aiub_mgex"]
 filename = "COM${WWWWD}.ERP"
 location = ["aiub_mgex"]
 
-[f_code_mgex_aiub_bias]
-filename = "COM${WWWWD}.BIA"
-location = ["aiub_mgex"]
 
 
 [f_coder_eph_aiub]
@@ -812,9 +799,6 @@ location = ["cnes_rt"]
 filename = "cnt${WWWWD}.clk"
 location = ["cnes_rt"]
 
-[f_cnes_rtGR_bias]
-filename = "cnt${WWWWD}.bia"
-location = ["cnes_rt"]
 
 [f_cnes_rt_sp3]
 filename = "cnt${WWWWD}.sp3"
@@ -824,9 +808,7 @@ location = ["cnes_rt"]
 filename = "cnt${WWWWD}.clk"
 location = ["cnes_rt"]
 
-[f_cnes_rt_bias]
-filename = "cnt${WWWWD}.bia"
-location = ["cnes_rt"]
+
 
 # JPL ----------------------------------------------------------------------------------------------
 # NOTE ERP parameter files from jpl are slightly different from igs ones, until the load function is not changed use the IGS ones
@@ -1106,7 +1088,83 @@ location = ["bkg_brdc"]
 filename = "BRDC00WRD_S_${YYYY}${DOY}0000_01D_MN.rnx"
 location = ["bkg_brdc"]
 
+#***************************************************************************************************
+# ACCEPTED COMPUTATION CENTERS FOR BIAS
+#***************************************************************************************************
+
+[BIAS_CENTER]
+available = ["none" "default" "code_ppp" "code_iono" "cas_iono" "dlr_iono" "cnes_pos" "esa_mgex_bia"]
+
+#***************************************************************************************************
+# BIAS CENTER DEFINITION
+#***************************************************************************************************
+
+[bc_none]
+description = "Empty center, no bias are needed"
+bias = "empty"
+
+[bc_default]
+description = "Default: dlr IONO"
+bias = "dlr_daily_dcb_iono"
+
+[bc_code_pos]
+description = "CODE for PPP ambiguity fixing"
+bias = "code_mgex_aiub_bias"
+
+[bc_code_iono]
+description = "CODE old gps dcb"
+bias = "code_p1p2_dcb & code_p1c1_dcb" 
+
+[bc_cas_iono]
+description = "CAS MGEX DCB"
+bias = "cas_dcb_iono"
+
+[bc_dlr_iono]
+description = "DLR MGEX daily DCB"
+bias = "dlr_daily_dcb_iono"
+
+
+[bc_cnes_pos]
+description = "CNES realtime Bias for PPP"
+bias = "cnes_rt_bias"
+
+[bc_esa_mgex_bia]
+description = "European Space Operation Center ( ESOC ) MGEX Bias for PPP"
+bias = "esa_mgex_bia"
+
+
+#***************************************************************************************************
+# SINGLE FILE DEFINITION FOR BIAS
+#***************************************************************************************************
+
 # CAS ----------------------------------------------------------------------------------------------
 [f_cas_dcb_iono]
 filename = "CAS0MGXRAP_${YYYY}${DOY}0000_01D_01D_DCB.BSX"
 location = ["mgex_dcb"]
+
+# DLR ----------------------------------------------------------------------------------------------
+[f_dlr_daily_dcb_iono]
+filename = "DLR0MGXFIN_${YYYY}${DOYT}0000_03L_01D_DCB.BSX"
+location = ["dcb_cddis"]
+
+# code dcb old -------------------------------------------------------------------------------------
+[f_code_p1p2_dcb]
+filename = "P1P2${YY}${MM}.DCB"
+location = ["aiub_dcb"]
+
+[f_code_p1c1_dcb]
+filename = "P1C1${YY}${MM}.DCB"
+location = ["aiub_dcb"]
+
+[f_code_mgex_aiub_bias]
+filename = "COM${WWWWD}.BIA"
+location = ["aiub_mgex"]
+
+[f_cnes_rt_bias]
+filename = "cnt${WWWWD}.bia"
+location = ["cnes_rt"]
+
+
+[f_cnes_rtGR_bias]
+filename = "cnt${WWWWD}.bia"
+location = ["cnes_rt"]
