--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -18,7 +18,7 @@ kasi = ["nfs.kasi.re.kr" "21"]
 esa = ["navigation-office.esa.int" "80"]
 esa_gscc = ["gssc.esa.int" "21"]
 ggos_tuwien = ["vmf.geo.tuwien.ac.at" "443"]
-gfz0 = ["ftp.gfz-potsdam.de" "21"]
+gfz_alt = ["ftp.gfz-potsdam.de" "21"]
 gfz = ["isdcftp.gfz-potsdam.de" "21"]
 bkg2023 = ["igs-ftp.bkg.bund.de" "21"]
 ppp_wiz = ["www.ppp-wizard.net" "80"]
@@ -30,125 +30,122 @@ jaxa = ["mgmds01.tksc.jaxa.jp" "21"]
 #***************************************************************************************************
 
 [IONO_CENTER]
-available = ["none" "default" "igs" "esa" "jpl" "jpl_esa" "nrcan" "code" "code_ign" "tucat" "cas" "whuan" "igs_w2238" "code_w2238"]
+available = ["none" "default" "igs" "esa" "jpl" "jpl_esa" "nrcan" "code" "code_cddis_predicted" "code_ign" "tucat" "cas" "whuan" "igs_w2238" "code_w2238"]
 #***************************************************************************************************
 # IONO CENTER DEFINITION
 #***************************************************************************************************
 
 [ic_none]
 description = "Empty center, no ionex are needed"
-iono_final = "empty"
-iono_predicted1 = "empty"
-iono_predicted2 = "empty"
-iono_broadcast = "empty"
 
 [ic_default]
 description = "Default: IGS final + CODE"
 iono_final = "igs_ionex_rnx3"
 iono_rapid = "code_ionex_rapid"
+iono_predicted1 = "code_predicted1"
+iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
 
 [ic_igs_w2238]
 description = "R2 - IGS average solution (till week 2238)"
 iono_final = "igs_ionex"
 iono_rapid = "igs_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_igs]
 description = "R3 - IGS average solution "
 iono_final = "igs_ionex_rnx3"
 iono_rapid = "igs_ionex_rapid_rnx3"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_code_w2238]
 description = "R2 - Center for Orbit Determination Europe (till week 2238)"
 iono_final = "code_ionex_bk"
 iono_rapid = "code_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
+iono_predicted1 = "code_predicted1"
+iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
 
 [ic_code]
 description = "R3 - Center for Orbit Determination Europe"
 iono_final = "code_ionex_rnx3"
 iono_rapid = "code_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
+iono_predicted1 = "code_predicted1_rnx3"
+iono_predicted2 = "code_predicted2_rnx3"
+
+[ic_code_cddis_predicted]
+description = "R2 - CODE iono predicted orbits (from CDDIS)"
+iono_predicted1 = "code_predicted1_cddis_rnx2"
+iono_predicted2 = "code_predicted1_cddis_rnx2"
 
 [ic_code_ign]
-description = "R3 - Center for Orbit Determination Europe @ IGN, distinct name for p1/p2"
+description = "R3 - Center for Orbit Determination Europe @IGN, distinct name for p1/p2"
 iono_final = "code_ionex_bk"
 iono_rapid = "code_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
+iono_predicted1 = "code_predicted1_bk"
+iono_predicted2 = "code_predicted2_bk"
 iono_broadcast = "code_iono_broadcast"
 
 [ic_esa]
 description = "R3 - European Space Agency"
 iono_final = "esa_ionex_rnx3"
 iono_rapid = "esa_ionex_rapid_hr_rnx3"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_jpl]
 description = "R3 - Jet Propulsion Lab"
 iono_final = "jpl_ionex"
 iono_rapid = "jpl_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_jpl_esa]
 description = "R3 - Jet Propulsion Lab (from ESA)"
 iono_final = "jpl_ionex_esa"
 iono_rapid = "jpl_ionex_rapid_esa"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_nrcan]
 description = "R3 - National Resources Canada"
 iono_final = "nrcan_ionex"
-iono_rapid = "none"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_tucat]
 description = "R3 - Technical Univ. of Catalonia"
 iono_final = "tucat_ionex"
 iono_rapid = "tucat_ionex_rapid_hr"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_cas]
 description = "R3 - Chinese Academy of Sciences"
 iono_final = "cas_ionex"
 iono_rapid = "cas_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 [ic_whuan]
 description = "R3 - Whuan University"
 iono_final = "whuan_ionex"
 iono_rapid = "whuan_ionex_rapid"
-iono_predicted1 = "none"
-iono_predicted2 = "none"
-iono_broadcast = "none"
 
 #***************************************************************************************************
 # SINGLE FILE DEFINITION FOR IONO
 #***************************************************************************************************
+[f_code_predicted1]
+file_path = "?{aiub}/CODE/IONO/P1/${YYYY}/COPG${DOY}0.${YY}I"
+[f_code_predicted2]
+file_path = "?{aiub}/CODE/IONO/P2/${YYYY}/COPG${DOY}0.${YY}I"
+# [f_code_predicted5]
+# file_path = "?{aiub}/CODE/IONO/P5/${YYYY}/COPG${DOY}0.${YY}I"
+[f_code_predicted1_rnx3]
+file_path = "?{aiub}/CODE/IONO/P1/${YYYY}/COD0OPSPRD_${YYYY}${DOY}0000_01D_01H_GIM.INX"
+[f_code_predicted2_rnx3]
+file_path = "?{aiub}/CODE/IONO/P2/${YYYY}/COD0OPSPRD_${YYYY}${DOY}0000_01D_01H_GIM.INX"
+[f_code_predicted1_cddis_rnx2]
+file_path = "?{cddis}/archive/gnss/products/ionex/${YYYY}/${DOY}/c1pg${DOY}0.${YY}i"
+[f_code_predicted2_cddis_rnx2]
+file_path = "?{cddis}/archive/gnss/products/ionex/${YYYY}/${DOY}/c2pg${DOY}0.${YY}i"
+# [f_code_predicted5_rnx3]
+# file_path = "?{aiub}/CODE/IONO/P5/${YYYY}/COD0OPSPRD_${YYYY}${DOY}0000_01D_01H_GIM.INX"
+# [f_code_ionex]
+# not there actually
+# file_path = "?{aiub}/CODE/${YYYY}/CODG${DOY}0.${YY}I"
 [f_code_ionex_rnx3]
 file_path = "?{aiub}/CODE/${YYYY}/COD0OPSFIN_${YYYY}${DOY}0000_01D_01H_GIM.INX"
+[f_code_predicted1_bk]
+file_path = "?{esa_gscc}/gnss/products/ionex/${YYYY}/${DOY}/c1pg${DOY}0.${YY}i"
+[f_code_predicted2_bk]
+file_path = "?{esa_gscc}/gnss/products/ionex/${YYYY}/${DOY}/c2pg${DOY}0.${YY}i"
 [f_cas_ionex_rapid]
 file_path = "?{esa_gscc}/gnss/products/ionex/${YYYY}/${DOY}/carg${DOY}0.${YY}i"
 [f_cas_ionex]
@@ -1137,6 +1134,30 @@ file_path = "?{aiub}/CODE/${YYYY}/COD0OPSFIN_${YYYY}${DOY}0000_01D_05S_CLK.CLK_V
 [f_code_aiub_erp_rnx3]
 file_path = "?{aiub}/CODE/${YYYY}/COD0OPSFIN_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
 
+# CODE MGEX @ AIUB REPRO 2020 ----------------------------------------------------------------------
+# Nothing newer than 2019
+# [f_code_aiub_repro_igs20_eph]
+# file_path = "?{aiub}/REPRO_I20/CODE/${YYYY}/COR${WWWWD}.EPH"
+# [f_code_aiub_repro_igs20_clk_30s]
+# file_path = "?{aiub}/REPRO_I20/CODE/${YYYY}/COR${WWWWD}.CLK"
+# [f_code_aiub_repro_igs20_clk_05s]
+# file_path = "?{aiub}/REPRO_I20/CODE/${YYYY}/COR${WWWWD}_05s.CLK"
+# [f_code_aiub_repro_igs20_erp]
+# file_path = "?{aiub}/REPRO_I20/CODE/${YYYY}/COR${WWWWD}.ERP"
+[f_code_aiub_repro_igs20_bias]
+file_path = "?{aiub}/REPRO_I20/CODE/${YYYY}/COR${WWWWD}.BIA"
+
+# CODE MGEX @ AIUB REPRO 2020 ----------------------------------------------------------------------
+# Nothing newer than 2022
+# [f_code_aiub_repro2020_eph]
+# file_path = "?{aiub}/REPRO_2020/CODE/${YYYY}/COD0R03FIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
+# [f_code_aiub_repro2020_clk_30s]
+# file_path = "?{aiub}/REPRO_2020/CODE/${YYYY}/COD0R03FIN_${YYYY}${DOY}0000_01D_05S_CLK.CLK"
+# [f_code_aiub_repro2020_erp]
+# file_path = "?{aiub}/REPRO_2020/CODE/${YYYY}/COD0R03FIN_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
+[f_code_aiub_repro2020_bias]
+file_path = "?{aiub}/REPRO_2020/CODE/${YYYY}/COD0R03FIN_${YYYY}${DOY}0000_01D_01D_OSB.BIA"
+
 # CODE IGS20 @ CDDIS --------------------------------------------------------------------------------
 [f_code_igs20_cddis_eph]
 file_path = "?{cddis}/archive/gps/products/${WWWW}/COD0OPSFIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
@@ -1400,30 +1421,42 @@ file_path = "?{gfz}/gnss/products/ultra/w${WWWW}/GFZ0OPSULT_${YYYY}${DOY}0000_02
 [f_gfz_ultra_erp]
 file_path = "?{gfz}/gnss/products/ultra/w${WWWW}/GFZ0OPSULT_${YYYY}${DOY}0000_02D_01D_ERP.ERP"
 [f_gfz_old_mgex_sp3]
-file_path = "?{gfz0}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
+file_path = "?{gfz_alt}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
 [f_gfz_old_mgex_clk]
-file_path = "?{gfz0}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+file_path = "?{gfz_alt}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
 [f_gfz_old_mgex_erp]
-file_path = "?{gfz0}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
+file_path = "?{gfz_alt}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
 [f_gfz_old_mgex_bia]
-file_path = "?{gfz0}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_01D_REL.BIA"
+file_path = "?{gfz_alt}/pub/GNSS/products/mgex/${WWWW}_IGS20/GBM0MGXRAP_${YYYY}${DOY}0000_01D_01D_REL.BIA"
 [f_gfz_old_sp3]
-# file_path = "?{gfz0}/pub/GNSS/products/final/w${WWWW}/gfz${WWWWD}.sp3"
-file_path = "?{gfz0}/pub/GNSS/products/final/w${WWWW}/GFZ0OPSFIN_{YYYY}${DOY}0000_01D_15M_ORB.SP3"
+# file_path = "?{gfz_alt}/pub/GNSS/products/final/w${WWWW}/gfz${WWWWD}.sp3"
+file_path = "?{gfz_alt}/pub/GNSS/products/final/w${WWWW}/GFZ0OPSFIN_{YYYY}${DOY}0000_01D_15M_ORB.SP3"
 [f_gfz_old_clk]
-# file_path = "?{gfz0}/pub/GNSS/products/final/w${WWWW}/gfz${WWWWD}.clk"
-file_path = "?{gfz0}/pub/GNSS/products/final/w${WWWW}/GFZ0OPSFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+# file_path = "?{gfz_alt}/pub/GNSS/products/final/w${WWWW}/gfz${WWWWD}.clk"
+file_path = "?{gfz_alt}/pub/GNSS/products/final/w${WWWW}/GFZ0OPSFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
 [f_gfz_old_erp]
-# file_path = "?{gfz0}/pub/GNSS/products/final/w${WWWW}/gfz${WWWWD}.erp"
-file_path = "?{gfz0}/pub/GNSS/products/final/w${WWWW}/GFZ0OPSFIN_${YYYY}${DOY}0000_07D_01D_ERP.ERP"
+# file_path = "?{gfz_alt}/pub/GNSS/products/final/w${WWWW}/gfz${WWWWD}.erp"
+file_path = "?{gfz_alt}/pub/GNSS/products/final/w${WWWW}/GFZ0OPSFIN_${YYYY}${DOY}0000_07D_01D_ERP.ERP"
+# [f_gfz_old_sp3_rapid]
+# file_path = "?{esa_gscc}/gnss/products/${WWWW}/mgex/GFZ0MGXRAP_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
+# [f_gfz_old_clk_rapid]
+# file_path = "?{esa_gscc}/gnss/products/${WWWW}/mgex/GFZ0MGXRAP_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+# [f_gfz_erp_rapid]
+# file_path = "?{esa_gscc}/gnss/products/${WWWW}/mgex/GFZ0MGXRAP_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
+# [f_gfz_old_bia_rapid]
+# file_path = "?{esa_gscc}/gnss/products/${WWWW}/mgex/GFZ0MGXRAP_${YYYY}${DOY}0000_01D_01D_REL.BIA"
 [f_gfz_old_sp3_ultra]
-file_path = "?{gfz0}/pub/GNSS/products/ultra/w${WWWW}/gfu${WWWW}0_${6H}.sp3"
+file_path = "?{gfz_alt}/pub/GNSS/products/ultra/w${WWWW}/gfu${WWWW}0_${6H}.sp3"
 [f_gfz_old_erp_ultra]
-file_path = "?{gfz0}/pub/GNSS/products/ultra/w${WWWW}/gfu${WWWW}0_${6H}.erp"
+file_path = "?{gfz_alt}/pub/GNSS/products/ultra/w${WWWW}/gfu${WWWW}0_${6H}.erp"
 [f_hoic_gfz]
-file_path = "?{gfz0}/pub/home/GNSS/products/gfz-hoic/IFCz/${YYYY}/IFCz${YYYY}${MM}.H${HH}"
+# only up to 2020
+# file_path = "?{gfz}/pub/home/GNSS/products/gfz-hoic/IFCz/${YYYY}/IFCz${YYYY}${MM}.H${HH}"
+file_path = "?{gfz_alt}/pub/home/GNSS/products/gfz-hoic/IFCz/${YYYY}/IFCz${YYYY}${MM}.H${HH}"
 [f_soic_gfz]
-file_path = "?{gfz0}/pub/home/GNSS/products/gfz-hoic/SFCz/${YYYY}/SFCz${YYYY}${MM}.H${HH}"
+# only up to 2020
+# file_path = "?{gfz}/pub/home/GNSS/products/gfz-hoic/SFCz/${YYYY}/SFCz${YYYY}${MM}.H${HH}"
+file_path = "?{gfz_alt}/pub/home/GNSS/products/gfz-hoic/SFCz/${YYYY}/SFCz${YYYY}${MM}.H${HH}"
 
 # JAXA MGEX ----------------------------------------------------------------------------------------
 [f_jaxa_eph]
@@ -1539,6 +1572,12 @@ file_path = "?{cddis}/archive/gps/products/${WWWW}/ESA0OPSULT_${YYYY}${DOY}0000_
 file_path = "?{cddis}/archive/gps/products/${WWWW}/ESA0OPSULT_${YYYY}${DOY}0000_02D_01D_ERP.ERP"
 
 # DLR & TUM ----------------------------------------------------------------------------------------
+[f_dlrtum_broadcast]
+# not available anymore
+# file_path = "?{cddis}/pub/gps/data/campaign/mgex/daily/rinex3/${YYYY}/brdm/brdm${DOY}0.${YY}p"
+file_path = "?{cddis}/archive/gnss/data/daily/${YYYY}/brdc/BRDM00DLR_S_{YYYY}${DOY}0000_01D_MN.rnx"
+
+# DLR & TUM ----------------------------------------------------------------------------------------
 [f_bkg_broadcast]
 file_path = "?{bkg}/root_ftp/IGS/BRDC/${YYYY}/${DOY}/BRDM00DLR_S_${YYYY}${DOY}0000_01D_MN.rnx"
 [f_ign_broadcast]
@@ -1573,7 +1612,7 @@ file_path = "?{ggos_tuwien}/trop_products/GRID/5x5/VMF3/VMF3_FC/${YYYY}/VMF3_${Y
 #***************************************************************************************************
 
 [BIAS_CENTER]
-available = ["none" "default" "code_igs20" "code_ppp" "code_iono" "code_repro_igs20" "code_repro2020" "cas_iono" "dlr_iono" "cnes_pos" "esa_mgex_bia"]
+available = ["none" "default" "code_ppp_R3" "code_igs20_R3" "cas_iono_R3" "dlr_iono_R3" "esa_mgex_bia_R3" "cnes_pos_R2" "code_iono_R2" "code_ppp_R2" "code_repro2020_R2" "code_repro_igs20_R2"]
 #***************************************************************************************************
 # BIAS CENTER DEFINITION
 #***************************************************************************************************
@@ -1586,36 +1625,44 @@ bias = "empty"
 description = "Default: dlr IONO"
 bias = "dlr_daily_dcb_iono"
 
-[bc_code_repro2020]
-description = "CODE repro 2020"
+[bc_code_repro2020_R2]
+description = "R2 - CODE - CODE repro 2020 (only up to 2022)"
 bias = "code_aiub_repro2020_bias"
 
-[bc_code_repro_igs20]
-description = "CODE repro igs20"
+[bc_code_repro_igs20_R2]
+description = "R2 - CODE - CODE MGEX repro igs20 (up to 2020)"
 bias = "code_aiub_repro_igs20_bias"
 
-[bc_code_ppp]
-description = "CODE for PPP ambiguity fixing"
+[bc_code_ppp_R3]
+description = "R3 - CODE - CODE MGEX FINAL from AIUB for PPP ambiguity fixing"
 bias = "code_mgex_aiub_bias_rnx3"
 
-[bc_code_igs20]
-description = "CODE FINAL IGS20"
+[bc_code_ppp_R2]
+description = "R2 - CODE - CODE MGEX FINAL from AIUB for PPP ambiguity fixing (till week 2238)"
+bias = "code_mgex_aiub_bias_w2238"
+
+[bc_code_igs20_R3]
+description = "R3 - CODE - CODE FINAL IGS20 from CDDIS"
 bias = "code_igs20_cddis_bias"
 
-[bc_code_iono]
-description = "CODE old gps dcb"
+[bc_code_iono_R2]
+description = "R2 - CODE - CODE old gps dcb"
 bias = "code_p1p2_dcb & code_p1c1_dcb" 
 
-[bc_cas_iono]
-description = "CAS MGEX DCB"
+[bc_cas_iono_R3]
+description = "R3 - CAS - CAS MGEX DCB from IGN ENSG"
 bias = "cas_dcb_iono"
 
-[bc_dlr_iono]
-description = "DLR MGEX daily DCB"
+[bc_dlr_iono_R3]
+description = "R3 - DLR MGEX daily DCB from CDDIS"
 bias = "dlr_daily_dcb_iono"
 
-[bc_esa_mgex_bia]
-description = "European Space Operation Center ( ESOC ) MGEX Bias for PPP"
+[bc_cnes_pos_R2]
+description = "R2 - CNES - CNES realtime Bias for PPP"
+bias = "cnes_rt_bias"
+
+[bc_esa_mgex_bia_R3]
+description = "R3 - ESOC - European Space Operation Center ( ESOC ) MGEX Bias for PPP"
 bias = "esa_mgex_bia"
 
 #***************************************************************************************************
@@ -1625,11 +1672,13 @@ bias = "esa_mgex_bia"
 # CAS ----------------------------------------------------------------------------------------------
 [f_cas_dcb_iono]
 file_path = "?{ign_ensg}/pub/igs/products/mgex/dcb/${YYYY}/CAS0MGXRAP_${YYYY}${DOY}0000_01D_01D_DCB.BSX"
-
+# from January 23, 2023
+# file_path = "?{ign_ensg}/pub/igs/products/mgex/dcb/${YYYY}/CAS0OPSRAP_${YYYY}${DOY}0000_01D_01D_DCB.BIA"
 # DLR ----------------------------------------------------------------------------------------------
 [f_dlr_daily_dcb_iono]
 file_path = "?{cddis}/archive/gnss/products/bias/${YYYY}/DLR0MGXFIN_${YYYY}${DOYT}0000_03L_01D_DCB.BSX"
-
+# from January 23, 2023
+# file_path = "?{cddis}/archive/gnss/products/bias/${YYYY}/DLR0OPSFIN_${YYYY}${DOYT}0000_03L_01D_DCB.BIA"
 # code dcb old -------------------------------------------------------------------------------------
 [f_code_p1p2_dcb]
 file_path = "?{aiub}/CODE/${YYYY}/P1P2${YY}${MM}.DCB"
