High rate bugfixes from BREVA + update of resources and minor fixes REMEBER to run Core.updateAppFiles();

--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -11,7 +11,7 @@ cddis = ["cddis.nasa.gov" "443"]
 aiub = ["ftp.aiub.unibe.ch" "21"]
 ign = ["igs.ign.fr" "21"]
 ign_ensg = ["igs.ensg.ign.fr" "21"]
-jpl = ["sideshow.jpl.nasa.gov" "80"]
+jpl = ["sideshow.jpl.nasa.gov" "443"]
 whu = ["igs.gnsswhu.cn" "21"]
 sopac = ["garner.ucsd.edu" "21"]
 kasi = ["nfs.kasi.re.kr" "21"]
@@ -30,7 +30,7 @@ jaxa = ["mgmds01.tksc.jaxa.jp" "21"]
 #***************************************************************************************************
 
 [IONO_CENTER]
-available = ["none" "default" "igs" "esa" "jpl" "jpl_esa" "nrcan" "code" "code_cddis_predicted" "code_ign" "tucat" "cas" "whuan" "igs_w2238" "code_w2238"]
+available = ["none" "default" "cas" "code" "code_ign" "esa" "igs" "jpl" "jpl_esa" "nrcan" "tucat" "whuan" "code_w2238" "code_cddis_predicted" "igs_w2238"]
 #***************************************************************************************************
 # IONO CENTER DEFINITION
 #***************************************************************************************************
@@ -213,7 +213,7 @@ file_path = "?{aiub}/CODE/${YYYY}/CGIM${DOY}0.${YY}N"
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "GRECJ@default" "G@igs_gps_R3" "G@igs_gps_rapid_R3" "G@igs_gps_ultra_R3" "G@igs_cddis_gps" "G@igs_cddis_rap_gps" "G@igs_cddis_ult_gps" "GRECJ@code_mgex_aiub_rnx3" "GRECJ@code_mgex_aiub_rap_rnx3" "GRECJ@code_mgex_aiub_ult_rnx3" "GREC@code_igs20_cddis_GREC" "GRE@code_igs20_cddis" "GRE@code_igs20_cddis_rapid" "GRE@code_igs20_cddis_ultra" "GR@code_aiub_rnx3" "GRECJ@iac" "GR@cnes_GR_fin" "GR@cnes_GR_rap" "GR@cnes_GR_ult" "G@emr_rap" "G@emr_ult" "EGRCJ@esoc_mgex" "GRE@esoc" "GRE@esoc_rap" "GRE@esoc_ult" "GRECJ@gfz" "GRECJ@gfz_rapid" "GRECJ@gfz_ultra" "GRECJ@gfz_old" "GR@gfz_GR" "GREC@shanghai" "GREC@wuhan" "GREC@wuhan_rap" "G@jpl" "G@jpl_rap" "G@jpl_rap_rnx3" "G@igs_legacy" "G@igs_legacy_rap" "G@igs_legacy_ult" "GRE@esoc_cddis" "GRE@esoc_cddis_rap" "GRE@esoc_cddis_ult" "GRE@code1d" "GRE@code1d_rap" "GRE@code1d_ult" "GRECJ@code_mgex" "GRECJ@code_mgex_cas_dcb" "GRECJ@jaxa_madoca" "GRECJ@jaxa_madoca_rapid" "GRECJ@jaxa_madoca_ultra" "G@igs_cddis_gps_w2238" "GRECJ@code_mgex_aiub_w2238" "GR@code_aiub_w2238" "GR@cnes_GR_w2238" "GRE@cnes_GRE_old_w2128" "G@emr_w2238" "GR@esoc_w2238" "GR@esoc_w2238_rap" "G@igs_legacy_w2238" "G@igs_legacy_rap_w2238" "G@igs_legacy_ult_w2238" "GR@esoc_cddis_w2238" "GR@code1d_w2238" "G@igs_gps_w2238" "G@igs_gps_rapid_w2238" "G@igs_gps_ultra_w2238"]
+available = ["none" "GRECJI@mgex_broadcast" "GRECJ@default" "G@igs_gps_R3" "G@igs_gps_rapid_R3" "G@igs_gps_ultra_R3" "G@igs_cddis_gps" "G@igs_cddis_rap_gps" "G@igs_cddis_ult_gps" "GRECJ@code_mgex_aiub_rnx3" "GRECJ@code_mgex_aiub_rap_rnx3" "GRECJ@code_mgex_aiub_ult_rnx3" "GREC@code_igs20_cddis_GREC" "GRE@code_igs20_cddis" "GRE@code_igs20_cddis_rapid" "GRE@code_igs20_cddis_ultra" "GR@code_aiub_rnx3" "GRECJ@iac" "GR@cnes_GR_fin" "GR@cnes_GR_rap" "GR@cnes_GR_ult" "G@emr_rap" "G@emr_ult" "EGRCJ@esoc_mgex" "GRE@esoc" "GRE@esoc_rap" "GRE@esoc_ult" "GRECJ@gfz" "GRECJ@gfz_rapid" "GRECJ@gfz_ultra" "GRECJ@gfz_old" "GR@gfz_GR" "GREC@shanghai" "GREC@wuhan" "GREC@wuhan_rap" "G@jpl" "G@jpl_rap" "G@jpl_rap_rnx3" "G@igs_legacy" "G@igs_legacy_rap" "G@igs_legacy_ult" "GRE@esoc_cddis" "GRE@esoc_cddis_rap" "GRE@esoc_cddis_ult" "GRE@code1d" "GRE@code1d_rap" "GRE@code1d_ult" "GRECJ@code_mgex" "GRECJ@code_mgex_cas_dcb" "GRECJ@jaxa_madoca" "GRECJ@jaxa_madoca_rapid" "GRECJ@jaxa_madoca_ultra" "G@jpl_rap_rnx3" "G@igs_cddis_gps_w2238" "GRECJ@code_mgex_aiub_w2238" "GR@code_aiub_w2238" "GR@cnes_GR_w2238" "GRE@cnes_GRE_old_w2128" "G@emr_w2238" "GR@esoc_w2238" "GR@esoc_w2238_rap" "G@igs_legacy_w2238" "G@igs_legacy_rap_w2238" "G@igs_legacy_ult_w2238" "GR@esoc_cddis_w2238" "GR@code1d_w2238" "G@igs_gps_w2238" "G@igs_gps_rapid_w2238" "G@igs_gps_ultra_w2238"]
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
 #***************************************************************************************************
@@ -538,6 +538,36 @@ bias = "code_mgex_aiub_bias_rnx3"
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
 
+# CODE @ AIUB REPRO IGS20 --------------------------------------------------------------------------
+
+[oc_code_aiub_repro_igs20]
+description = "R2 - CODE REPR IGS20 - GRE - O/C 15M 30S - Center for Orbit Determination Europe - 3 day arc - from AIUB server"
+# CENTER FOR ORBIT DETERMINATION IN EUROPE (CODE)          
+# IGS-Repro3 GNSS orbits and clocks for year-day 2019-269  
+# Middle day of a 3-day long-arc GPS/GLO/GAL solution      
+# Product reference DOI: 10.7892/boris.135946              
+# PCV:IGS14      OL/AL:FES2014b NONE     YN ORB:CoN CLK:BRD
+final = "code_aiub_repro_igs20_eph & ( code_aiub_repro_igs20_erp ) & ( code_aiub_repro_igs20_clk_30s )"
+final_latency = [100 312]
+bias = "code_aiub_repro2020_bias"
+iono_center = "code"
+atm_load = "tuw_atm_load_v04"
+
+# CODE @ AIUB REPRO 2020 ---------------------------------------------------------------------------
+
+[oc_code_aiub_repro2020]
+description = "R3 - CODE REPRO2020 - GRE - O/C 15M 30S - Center for Orbit Determination Europe - 3 day arc - from AIUB server"
+# CENTER FOR ORBIT DETERMINATION IN EUROPE (CODE)          
+# IGS-Repro3 GNSS orbits and clocks for year-day 2019-269  
+# Middle day of a 3-day long-arc GPS/GLO/GAL solution      
+# Product reference DOI: 10.7892/boris.135946              
+# PCV:IGS14      OL/AL:FES2014b NONE     YN ORB:CoN CLK:BRD
+final = "code_aiub_repro2020_eph & ( code_aiub_repro2020_erp ) & ( code_aiub_repro2020_clk_30s )"
+final_latency = [100 312]
+bias = "code_aiub_repro2020_bias"
+iono_center = "code"
+atm_load = "tuw_atm_load_v04"
+
 # CODE GR @ AIUB --------------------------------------------------------------------------------------
 
 [oc_code_aiub_w2238]
@@ -791,6 +821,12 @@ description = "R3 - JPL FINAL - G - O/C 05M 30S - Jet Propulsion Laboratory - or
 final = "( jpl_sp3 ) & ( igs_erp_final_rnx3 ) & ( jpl_clk )"
 final_latency = [168 312]
 rapid = "( jpl_sp3_rap ) & ( igs_erp_rapid_rnx3  ) & ( jpl_clk_rap )"
+
+[oc_jpl_rnx3]
+description = "R3 - JPL FINAL - G - O/C 05M 30S - Jet Propulsion Laboratory - orbits and clocks (rinex 3)"
+final = "( jpl_sp3_rnx3 ) & ( igs_erp_final_rnx3 ) & ( jpl_clk_rnx3 )"
+final_latency = [168 312]
+rapid = "( jpl_sp3_rap_rnx3 ) & ( igs_erp_rapid_rnx3  ) & ( jpl_clk_rap_rnx3 )"
 
 [oc_jpl_rap]
 description = "R3 - JPL RAPID - G - O/C 05M 30S - Jet Propulsion Laboratory - orbits and clocks "
@@ -1071,7 +1107,7 @@ file_path = "?{cddis}/archive/glonass/products/${WWWW}/igl${WWWWD}.sp3"
 file_path = "?{cddis}/archive/glonass/products/${WWWW}/igv${WWWWD}_${6H}.sp3"
 
 # IGS@CDDIS ----------------------------------------------------------------------------------------
-[f_igs_cddis_eph_gps_final_w2238 ]
+[f_igs_cddis_eph_gps_final_w2238]
 file_path = "?{cddis}/archive/gps/products/${WWWW}/igs${WWWWD}.sp3"
 [f_igs_cddis_eph_gps_rapid]
 file_path = "?{cddis}/archive/gps/products/${WWWW}/igr${WWWWD}.sp3"
@@ -1525,13 +1561,16 @@ file_path = "?{jpl}/pub/jpligsac/${WWWW}/jpl${WWWWD}.sp3"
 [f_jpl_clk]
 file_path = "?{jpl}/pub/jpligsac/${WWWW}/jpl${WWWWD}.clk"
 [f_jpl_erp]
-file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01W_01D_ERP.ERP"
+file_path = "?{jpl}/pub/jpligsac/${WWWW}/jpl${WWWW}7.erp"
 [f_jpl_sp3_rnx3]
-file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
+# file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
+file_path = "?{jpl}/pub/jpligsac/${WWWW}/JPL0OPSFIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
 [f_jpl_clk_rnx3]
-file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+#file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+file_path = "?{jpl}/pub/jpligsac/${WWWW}/JPL0OPSFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
 [f_jpl_erp_rnx3]
-file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01W_01D_ERP.ERP"
+#file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/JPL0OPSFIN_${YYYY}${DOY}0000_01W_01D_ERP.ERP"
+file_path = "?{jpl}/pub/jpligsac/${WWWW}/JPL0OPSFIN_${YYYY}${DOY}0000_01W_01D_ERP.ERP"
 [f_jpl_sp3_rap]
 file_path = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/jpl${WWWWD}.sp3"
 [f_jpl_clk_rap]
@@ -1612,7 +1651,7 @@ file_path = "?{ggos_tuwien}/trop_products/GRID/5x5/VMF3/VMF3_FC/${YYYY}/VMF3_${Y
 #***************************************************************************************************
 
 [BIAS_CENTER]
-available = ["none" "default" "code_ppp_R3" "code_igs20_R3" "cas_iono_R3" "dlr_iono_R3" "esa_mgex_bia_R3" "cnes_pos_R2" "code_iono_R2" "code_ppp_R2" "code_repro2020_R2" "code_repro_igs20_R2"]
+available = ["none" "default" "cas_iono_R3" "code_ppp_R3" "code_igs20_R3" "dlr_iono_R3" "esa_mgex_bia_R3" "cnes_pos_R2" "code_iono_R2" "code_ppp_R2" "code_repro2020_R2" "code_repro_igs20_R2"]
 #***************************************************************************************************
 # BIAS CENTER DEFINITION
 #***************************************************************************************************
